# ragops-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: eval_plan.md
eval/: collect_ragas_inputs.py  compare_judge_ragas.py  eval_retrieval.py  eval_set.jsonl  find_chunks.py  judge_faithfulness.csv  llm_judge.py  ragas_baseline.csv  ragas_inputs.jsonl  run_ragas.py  validate_eval_set.py
src/: config.py  embeddings.py  generate.py  ingest.py  opensearch_client.py  reranker.py  retrieve.py
src/ingestion/: __init__.py  build_chunks.py  chunk.py  loader.py
