[project]
name = "ragops-copilot"
version = "0.1.0"
description = "Production-grade RAG (later + Agent) assistant over the vLLM docs, with measured retrieval quality (recall@k)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.111.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "opensearch-py>=3.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
